Document macOS package build and target-system installation.
Expand PACKAGING.md with install guide (DMG, Gatekeeper, CLI, profiles,
results). Cross-link README and USER_GUIDE; jpackage script points to install docs.

Co-authored-by: Cursor <cursoragent@cursor.com>